# cmake_withOpenCV

./: CMakeLists.txt
header/: Common.h  IMatrixProc.h  ISP.hpp
source/: 10.ISP_FindShapeArea.cpp  ISP.cpp  histogram.cpp  main.cpp  packed10bit.cpp
